; ModuleID = '/home/carl/AnghaBench/openssl/providers/extr_legacyprov.c_legacy_query.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/extr_legacyprov.c_legacy_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@legacy_digests = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32*)* @legacy_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @legacy_query(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %7, align 8
  store i32 0, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %12 [
    i32 128, label %10
  ]

10:                                               ; preds = %3
  %11 = load i32*, i32** @legacy_digests, align 8
  store i32* %11, i32** %4, align 8
  br label %13

12:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %13

13:                                               ; preds = %12, %10
  %14 = load i32*, i32** %4, align 8
  ret i32* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
